crates/strider/tests/snapshots/v3__ppc32be__builtins__clz64.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ r9", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x20:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="Lzcount\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "9" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Lzcount\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "17" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "22" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "25" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "27" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "30" -> "28" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "28" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "36" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "38" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "40" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "16" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "42" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "48" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "48" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "16" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
